# leakhound

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/leakhound/: __main__.py  cli.py  engine.py  models.py
src/leakhound/detectors/: base.py  entropy_detector.py  regex_detector.py
src/leakhound/reporters/: base.py  console.py  json_reporter.py  sarif.py
src/leakhound/rules/: default_rules.yaml
tests/: test_console.py  test_engine.py  test_entropy.py  test_models.py  test_regex_detector.py  test_reporters.py
tests/fixtures/: sample_secrets.txt
