[project]
name = "leakhound"
version = "0.1.0"
description = "A secrets scanner that finds leaked credentials in code and git history."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
leakhound = "leakhound.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]